--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
-  <title>Nay Kg lh</title> 
+  <title>Hello Web</title> 
 </head> 
 <body> 
   <h1>Hello, Web Application Development!</h1> 
